--- a/templates/terraform/examples/firebase_project_basic.tf.erb
+++ b/templates/terraform/examples/firebase_project_basic.tf.erb
@@ -1,12 +1,11 @@
 resource "google_project" "default" {
   provider = google-beta
-
   project_id = "tf-test%{random_suffix}"
   name       = "tf-test%{random_suffix}"
   org_id     = "<%= ctx[:test_env_vars]['org_id'] %>"
 }
 
-resource "google_firebase_project" "default" {
+resource "google_firebase_project" "<%= ctx[:primary_resource_id] %>" {
   provider = google-beta
   project  = google_project.default.project_id
 }
